fix: accordion title align left

--- a/src/shared/ui/accordion/styles.module.scss
+++ b/src/shared/ui/accordion/styles.module.scss
@@ -21,6 +21,7 @@
 
 .title {
   margin: 0;
+  text-align: left;
 }
 
 @mixin animate($animation, $duration, $method, $times) {
